--- a/main.html
+++ b/main.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
-<script src="script.js"></script>
 <html>
-<head>
-	<title>Webradio</title>
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="icon.png">
-</head>
-<body>
-<h1>Webradio</h1>
+  <head>
+    <title>Webradio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="icon.png" />
+  </head>
+  <body>
+    <!-- Nav  -->
+    <div
+      class="fixed top-0 left-0 right-0 bg-green-900 h-16 flex items-center justify-center"
+    >
+      <!-- You can add your navigation links or content here -->
+      <div class="text-4xl text-yellow-500">CPP <span class="text-slate-200">WEB RADIO</span></div>
+      <div class="m-4 href="/">IMG HERE</div>
+    </div>
 
-    <title>Now Playing</title>
-</head>
-<body>
-    <h1>Now Playing</h1>
-    <div id="song-info">
+    <!-- Outmost container -->
+    <div class="flex flex-col items-center mt-16 h-screen bg-green-700">
+      <h2 class="">Now Playing</h2>
+      <div id="song-info">
         <p>Title: <span id="song-title"></span></p>
         <p>Artist: <span id="song-artist"></span></p>
+      </div>
+      <audio src="http://localhost:8443/my-radio.mp3" controls></audio>
+      <p><a href="http://localhost:8443/my-radio.mp3">Direct Link</a></p>
     </div>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Corrected script tag -->
+    <script src="script.js"></script>
     <script>
-        function updateSongInfo(title, artist) {
-            document.getElementById("song-title").textContent = title;
-            document.getElementById("song-artist").textContent = artist;
-        }
+      function updateSongInfo(title, artist) {
+        document.getElementById("song-title").textContent = title;
+        document.getElementById("song-artist").textContent = artist;
+      }
     </script>
-
-<p><audio src="http://localhost:8443/my-radio.mp3" controls></audio></p>
-<p><a href="http://localhost:8443/my-radio.mp3">Direct Link</a></p>
-</body>
+  </body>
 </html>
