--- a/main.html
+++ b/main.html
@@ -6,33 +6,134 @@
     <link rel="icon" href="icon.png" />
   </head>
   <body>
-    <!-- Nav  -->
+    <!-- Nav -->
     <div
-      class="fixed top-0 left-0 right-0 bg-green-900 h-16 flex items-center justify-center"
+      class="fixed top-0 left-0 right-0 bg-green-900 h-20 flex items-center justify-center"
     >
-      <!-- You can add your navigation links or content here -->
-      <div class="text-4xl text-yellow-500">CPP <span class="text-slate-200">WEB RADIO</span></div>
-      <div class="m-4 href="/">IMG HERE</div>
+      <div class="text-4xl text-yellow-500">
+        CPP <span class="text-slate-200">WEB RADIO</span>
+      </div>
+      <div class="m-4">
+        <img width="60px" src="/pic/headphone.png" alt="Logo" />
+      </div>
     </div>
 
-    <!-- Outmost container -->
-    <div class="flex flex-col items-center mt-16 h-screen bg-green-700">
-      <h2 class="">Now Playing</h2>
-      <div id="song-info">
-        <p>Title: <span id="song-title"></span></p>
-        <p>Artist: <span id="song-artist"></span></p>
+    <!-- Outmost Container -->
+    <div
+      class="flex flex items-center justify-center h-screen bg-green-700 space-x-20"
+    >
+      <!-- Music Component -->
+      <div
+        class="bg-slate-300 flex-col text-center p-2 rounded-xl border-2 border-slate-600 border-black shadow-2xl"
+      >
+        <h2 class="text-4xl text-slate-900 p-4 font-bold">Now Playing</h2>
+        <div
+          class="bg-slate-200 bg-transpart-50 rounded-xl p-4 border-2 border-slate-400"
+        >
+          <p class="text-2xl">Title: <span id="song-title"></span></p>
+          <p>Artist: <span id="song-artist"></span></p>
+          <img
+            class="p-2 rounded-3xl w-80 h-80"
+            id="song-artwork"
+            alt="Song Artwork"
+          />
+        </div>
+        <!-- song Slider -->
+        <div
+          class="flex gap-2 h- flex-col items-center p-4 md:flex-row md:justify-between mt-2 bg-slate-200 rounded-3xl border-2 border-slate-400"
+        >
+          <button
+            id="prev-song"
+            onclick="playPreviousSong()"
+            class="bg-yellow-500 text-white rounded-lg p-2 m-2 md:m-0 hover:border border-slate-600 hover:bg-yellow-600 hover:text-black"
+          >
+            Previous Song
+          </button>
+          <audio
+            class="w-full h-20 p-2 rounded-lg"
+            id="audio-player"
+            controls
+          ></audio>
+          <button
+            id="next-song"
+            onclick="playNextSong()"
+            class="bg-green-500 text-white rounded-lg p-2 m-2 md:m-0 hover:border border-slate-600 hover:bg-green-600 hover:text-black"
+          >
+            Next Song
+          </button>
+        </div>
       </div>
-      <audio src="http://localhost:8443/my-radio.mp3" controls></audio>
-      <p><a href="http://localhost:8443/my-radio.mp3">Direct Link</a></p>
+      <!-- song list -->
+      <div
+        class="flex-col text-center space-y-4 bg-slate-300 p-2 rounded-xl border-2 border-slate-600 shadow-2xl"
+      >
+        <div class="text-4xl font-bold">Song List</div>
+
+        <ul
+          class="p-2 underline bg-slate-200 rounded-lg border-2 border-slate-400"
+          id="song-list"
+        ></ul>
+      </div>
     </div>
+
+    <!-- Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Corrected script tag -->
-    <script src="script.js"></script>
     <script>
-      function updateSongInfo(title, artist) {
-        document.getElementById("song-title").textContent = title;
-        document.getElementById("song-artist").textContent = artist;
+      // Define an array of songs
+      const songs = [
+        {
+          title: "I Like You",
+          artist: "Post Malone, Doja Cat",
+          artwork: "pic/cover1.png",
+          songUrl: "/sound/song1.mp3",
+        },
+        {
+          title: "One Kiss",
+          artist: "Calvin Harris, Dua Lipa",
+          artwork: "pic/cover2.png",
+          songUrl: "/sound/song2.mp3",
+        },
+        // Add more songs as needed
+      ];
+
+      // Initialize the current song index
+      let currentSongIndex = 0;
+
+      // Function to update song information in the HTML
+      function updateSongInfo(song) {
+        document.getElementById("song-title").textContent = song.title;
+        document.getElementById("song-artist").textContent = song.artist;
+        document.getElementById("song-artwork").src = song.artwork;
+        document.getElementById("audio-player").src = song.songUrl;
       }
+
+      // Function to play the next song
+      function playNextSong() {
+        currentSongIndex = (currentSongIndex + 1) % songs.length;
+        updateSongInfo(songs[currentSongIndex]);
+      }
+
+      // Function to play the previous song
+      function playPreviousSong() {
+        currentSongIndex = (currentSongIndex - 1 + songs.length) % songs.length;
+        updateSongInfo(songs[currentSongIndex]);
+      }
+
+      // Function to display the list of songs
+      function displaySongList() {
+        const songList = document.getElementById("song-list");
+        songList.innerHTML = ""; // Clear the list
+
+        songs.forEach((song, index) => {
+          const listItem = document.createElement("li");
+          listItem.textContent = `${index + 1}. ${song.title} - ${song.artist}`;
+          songList.appendChild(listItem);
+        });
+      }
+
+      // Example usage: Initialize the first song and display the song list
+      updateSongInfo(songs[currentSongIndex]);
+      displaySongList();
     </script>
   </body>
 </html>
